--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ nav ul{
 
 /*Estilos del home*/
 #home{
-    background-image: url(/img/fondo.jpg);
+    background-image: url(../img/fondo.jpg);
     position: relative;
     height: 100vh;
     background-position: 80% 70%;
