--- a/css/styles.css
+++ b/css/styles.css
@@ -146,24 +146,24 @@ nav ul{
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     transition: transform 1.5s;
+    background-color: #ffffff;
 }
 
 .contArticle img{
-    height: 50%;
+    height: 42%;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
 
 .contArtP{
     width: 100%;
-    height: 50%;
-    background-color: #ffffff;
+    height: 45%;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
 
 .contArtP hr{
-    margin: 70px auto 20px;
+    margin: 50px auto 20px;
     width: 45px;
     height: 3px;
     background-color: #171717;
@@ -172,15 +172,14 @@ nav ul{
 .contArtP p{
     margin: 0 auto;
     width: 75%;
-    text-align: center;
+    text-align: justify;
     font-size: 16px;
-    letter-spacing: 1px;
 }
 
 .contArtP button{
     width: 30%;
     padding: 8px 2px;
-    margin-top: 10px;
+    margin-top: 15px;
     background-color: #ffffff;
     border: solid .2px #171717;
     color: #171717;
